@@ -3,7 +3,7 @@ package com.coolerpromc.productiveslimes.compat.jei;
 import com.coolerpromc.productiveslimes.ProductiveSlimes;
 import com.coolerpromc.productiveslimes.block.ModBlocks;
 import com.coolerpromc.productiveslimes.recipe.DnaSynthesizingRecipe;
-import com.mojang.blaze3d.vertex.PoseStack;
+import com.mojang.blaze3d.matrix.MatrixStack;
 import mezz.jei.api.constants.VanillaTypes;
 import mezz.jei.api.gui.IRecipeLayout;
 import mezz.jei.api.gui.drawable.IDrawable;
@@ -11,15 +11,16 @@ import mezz.jei.api.helpers.IGuiHelper;
 import mezz.jei.api.ingredients.IIngredients;
 import mezz.jei.api.recipe.category.IRecipeCategory;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.gui.GuiComponent;
-import net.minecraft.core.NonNullList;
-import net.minecraft.network.chat.Component;
-import net.minecraft.network.chat.TranslatableComponent;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.Items;
-import net.minecraft.world.item.crafting.Ingredient;
+import net.minecraft.client.gui.AbstractGui;
+import net.minecraft.item.ItemStack;
+import net.minecraft.item.Items;
+import net.minecraft.item.crafting.Ingredient;
+import net.minecraft.util.ResourceLocation;
+import net.minecraft.util.text.ITextComponent;
+import net.minecraft.util.text.TranslationTextComponent;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 public class DnaSynthesizingCategory implements IRecipeCategory<DnaSynthesizingRecipe> {
@@ -36,8 +37,8 @@ public class DnaSynthesizingCategory implements IRecipeCategory<DnaSynthesizingR
     }
 
     @Override
-    public Component getTitle() {
-        return new TranslatableComponent("block.productiveslimes.dna_synthesizer");
+    public String getTitle() {
+        return "DNA Synthesizer";
     }
 
     @Override
@@ -52,7 +53,7 @@ public class DnaSynthesizingCategory implements IRecipeCategory<DnaSynthesizingR
 
     @Override
     public void setIngredients(DnaSynthesizingRecipe dnaSynthesizingRecipe, IIngredients iIngredients) {
-        List<Ingredient> inputItems = List.of(dnaSynthesizingRecipe.getInputItems().get(0), dnaSynthesizingRecipe.getInputItems().get(1), dnaSynthesizingRecipe.getInputItems().get(2), Ingredient.of(Items.EGG));
+        List<Ingredient> inputItems = Arrays.asList(dnaSynthesizingRecipe.getInputItems().get(0), dnaSynthesizingRecipe.getInputItems().get(1), dnaSynthesizingRecipe.getInputItems().get(2), Ingredient.of(Items.EGG));
 
         iIngredients.setInputIngredients(inputItems);
         iIngredients.setOutputs(VanillaTypes.ITEM, dnaSynthesizingRecipe.getOutput());
@@ -70,30 +71,30 @@ public class DnaSynthesizingCategory implements IRecipeCategory<DnaSynthesizingR
     }
 
     @Override
-    public void draw(DnaSynthesizingRecipe recipe, PoseStack stack, double mouseX, double mouseY) {
+    public void draw(DnaSynthesizingRecipe recipe, MatrixStack stack, double mouseX, double mouseY) {
         Minecraft minecraft = Minecraft.getInstance();
-        minecraft.getTextureManager().bindForSetup(TEXTURE);
+        minecraft.getTextureManager().getTexture(TEXTURE);
 
         tickCount++;
         int arrowWidth = (tickCount % 600) * 26 / 600;
 
-        GuiComponent.blit(stack, 72, 33, 176, 0, arrowWidth, 8, 256, 256);
+        AbstractGui.blit(stack, 72, 33, 176, 0, arrowWidth, 8, 256, 256);
 
         int energyScaled = (int) Math.ceil((double) recipe.getEnergy() / 10000 * 57);
         energyScaled = arrowWidth >= 25 ? 0 : energyScaled;
 
-        GuiComponent.blit(stack, 4, 13 + (52 - energyScaled), 176, 65 - energyScaled, 9, energyScaled, 256, 256);
+        AbstractGui.blit(stack, 4, 13 + (52 - energyScaled), 176, 65 - energyScaled, 9, energyScaled, 256, 256);
     }
 
     @Override
-    public List<Component> getTooltipStrings(DnaSynthesizingRecipe recipe, double mouseX, double mouseY) {
-        Component text = new TranslatableComponent("tooltip.productiveslimes.energy_usage", recipe.getEnergy());
+    public List<ITextComponent> getTooltipStrings(DnaSynthesizingRecipe recipe, double mouseX, double mouseY) {
+        ITextComponent text = new TranslationTextComponent("tooltip.productiveslimes.energy_usage", recipe.getEnergy());
 
         if (mouseX >= 4 && mouseX <= 13 && mouseY >= 8 && mouseY <= 65) {
-            return List.of(text);
+            return Collections.singletonList(text);
         }
 
-        return List.of();
+        return Collections.emptyList();
     }
 
     @Override
