@@ -4,21 +4,22 @@ import com.coolerpromc.productiveslimes.ProductiveSlimes;
 import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
-import net.minecraft.core.NonNullList;
-import net.minecraft.network.FriendlyByteBuf;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.util.GsonHelper;
-import net.minecraft.world.SimpleContainer;
-import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.crafting.*;
-import net.minecraft.world.level.Level;
+import net.minecraft.inventory.Inventory;
+import net.minecraft.item.ItemStack;
+import net.minecraft.item.crafting.*;
+import net.minecraft.network.PacketBuffer;
+import net.minecraft.util.JSONUtils;
+import net.minecraft.util.NonNullList;
+import net.minecraft.util.ResourceLocation;
+import net.minecraft.world.World;
 
 import javax.annotation.Nullable;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
 
-public class DnaSynthesizingRecipe implements Recipe<SimpleContainer> {
+public class DnaSynthesizingRecipe implements IRecipe<Inventory> {
     private final List<Ingredient> inputItems;
     private final List<ItemStack> output;
     private final int energy;
@@ -34,8 +35,8 @@ public class DnaSynthesizingRecipe implements Recipe<SimpleContainer> {
     }
 
     @Override
-    public boolean matches(SimpleContainer pInput, Level pLevel) {
-        List<ItemStack> inputItems = List.of(pInput.getItem(0), pInput.getItem(1), pInput.getItem(2));
+    public boolean matches(Inventory pInput, World pLevel) {
+        List<ItemStack> inputItems = Arrays.asList(pInput.getItem(0), pInput.getItem(1), pInput.getItem(2));
 
         List<Ingredient> remainingIngredients = new ArrayList<>(this.inputItems);
 
@@ -65,7 +66,7 @@ public class DnaSynthesizingRecipe implements Recipe<SimpleContainer> {
     }
 
     @Override
-    public ItemStack assemble(SimpleContainer simpleContainer) {
+    public ItemStack assemble(Inventory simpleContainer) {
         return output.isEmpty() ? ItemStack.EMPTY : output.get(0).copy();
     }
 
@@ -80,12 +81,12 @@ public class DnaSynthesizingRecipe implements Recipe<SimpleContainer> {
     }
 
     @Override
-    public RecipeSerializer<?> getSerializer() {
+    public IRecipeSerializer<?> getSerializer() {
         return ModRecipes.DNA_SYNTHESIZING_SERIALIZER.get();
     }
 
     @Override
-    public RecipeType<?> getType() {
+    public IRecipeType<?> getType() {
         return Type.INSTANCE;
     }
 
@@ -110,38 +111,38 @@ public class DnaSynthesizingRecipe implements Recipe<SimpleContainer> {
         return id;
     }
 
-    public static class Type implements RecipeType<DnaSynthesizingRecipe> {
+    public static class Type implements IRecipeType<DnaSynthesizingRecipe> {
         public static final DnaSynthesizingRecipe.Type INSTANCE = new DnaSynthesizingRecipe.Type();
         public static final String ID = "dna_synthesizing";
     }
 
-    public static class Serializer implements RecipeSerializer<DnaSynthesizingRecipe>{
+    public static class Serializer implements IRecipeSerializer<DnaSynthesizingRecipe> {
         public static final DnaSynthesizingRecipe.Serializer INSTANCE = new DnaSynthesizingRecipe.Serializer();
         public static final ResourceLocation ID = new ResourceLocation(ProductiveSlimes.MODID, "dna_synthesizing");
         @Override
         public DnaSynthesizingRecipe fromJson(ResourceLocation resourceLocation, JsonObject jsonObject) {
-            JsonArray ingredients = GsonHelper.getAsJsonArray(jsonObject, "ingredients");
+            JsonArray ingredients = JSONUtils.getAsJsonArray(jsonObject, "ingredients");
             NonNullList<Ingredient> inputItems = NonNullList.withSize(ingredients.size(), Ingredient.EMPTY);
 
             for (int i = 0; i < ingredients.size(); i++) {
                 inputItems.set(i, Ingredient.fromJson(ingredients.get(i)));
             }
 
-            JsonArray outputs = GsonHelper.getAsJsonArray(jsonObject, "output");
+            JsonArray outputs = JSONUtils.getAsJsonArray(jsonObject, "output");
             List<ItemStack> output = new ArrayList<>();
 
             for(JsonElement element : outputs) {
-                output.add(ShapedRecipe.itemFromJson(element.getAsJsonObject()).getDefaultInstance());
+                output.add(ShapedRecipe.itemFromJson(element.getAsJsonObject()));
             }
 
-            int inputCount = GsonHelper.getAsInt(jsonObject, "inputCount");
-            int energy = GsonHelper.getAsInt(jsonObject, "energy");
+            int inputCount = JSONUtils.getAsInt(jsonObject, "inputCount");
+            int energy = JSONUtils.getAsInt(jsonObject, "energy");
 
             return new DnaSynthesizingRecipe(inputItems, output, inputCount, energy, resourceLocation);
         }
 
         @Override
-        public @Nullable DnaSynthesizingRecipe fromNetwork(ResourceLocation resourceLocation, FriendlyByteBuf buffer) {
+        public @Nullable DnaSynthesizingRecipe fromNetwork(ResourceLocation resourceLocation, PacketBuffer buffer) {
             NonNullList<Ingredient> inputItems = NonNullList.withSize(buffer.readInt(), Ingredient.EMPTY);
 
             for (int i = 0; i < inputItems.size(); i++) {
@@ -163,7 +164,7 @@ public class DnaSynthesizingRecipe implements Recipe<SimpleContainer> {
         }
 
         @Override
-        public void toNetwork(FriendlyByteBuf buffer, DnaSynthesizingRecipe recipe) {
+        public void toNetwork(PacketBuffer buffer, DnaSynthesizingRecipe recipe) {
             buffer.writeInt(recipe.inputItems.size());
 
             for (Ingredient ingredient : recipe.inputItems) {
@@ -183,7 +184,7 @@ public class DnaSynthesizingRecipe implements Recipe<SimpleContainer> {
         }
 
         @Override
-        public RecipeSerializer<?> setRegistryName(ResourceLocation resourceLocation) {
+        public IRecipeSerializer<?> setRegistryName(ResourceLocation resourceLocation) {
             return INSTANCE;
         }
 
@@ -194,8 +195,8 @@ public class DnaSynthesizingRecipe implements Recipe<SimpleContainer> {
         }
 
         @Override
-        public Class<RecipeSerializer<?>> getRegistryType() {
-            return Serializer.castClass(RecipeSerializer.class);
+        public Class<IRecipeSerializer<?>> getRegistryType() {
+            return Serializer.castClass(IRecipeSerializer.class);
         }
 
         @SuppressWarnings("unchecked") // Need this wrapper, because generics
